--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "check-prop-types": "^1.1.2",
     "jest": "^22.0.4",
     "prop-types": "^15.6.0"
-  },
-  "dependencies": {
-    "babel-preset-react": "^6.24.1"
   }
 }
