--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doc-prop-types",
+  "name": "prop-types-docs",
   "version": "0.1.0",
   "description": "",
   "main": "src/index.js",
