--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "prop-types-docs",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
-  "main": "src/index.js",
+  "main": "build/index.js",
   "scripts": {
+    "build": "babel src -d build",
+    "prepublish": "npm run build",
     "test": "jest"
   },
   "author": "",
@@ -16,6 +18,8 @@
     "prop-types": "^15.6.0"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "check-prop-types": "^1.1.2",
