--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "prop-types": "^15.6.0"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "check-prop-types": "^1.1.2",
     "jest": "^22.0.4",
+    "prop-types": "^15.6.1",
     "rollup": "^0.59.4"
   }
 }
