--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prop-types-docs",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "",
   "main": "build/index.js",
   "scripts": {
@@ -18,12 +18,12 @@
     "prop-types": "^15.6.0"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "check-prop-types": "^1.1.2",
-    "jest": "^22.0.4",
-    "prop-types": "^15.6.0"
+    "babel": "6.23.0",
+    "babel-cli": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "6.24.1",
+    "check-prop-types": "1.1.2",
+    "jest": "23.5.0",
+    "prop-types": "15.6.2"
   }
 }
